# ConfigSynthFlow

./: .gitignore  README.md  README_ZH.md  makefile  pyproject.toml
config_synth_flow/: __init__.py
config_synth_flow/agents/: QA_refinement.py  __init__.py  base.py  constant.py  magpie.py  multiturn_qa.py  self_instruct.py
config_synth_flow/agents/agent_instruct/: __init__.py  content_transform.py
config_synth_flow/agents/benchmark/: __init__.py  refinement.py
config_synth_flow/agents/magpie/: __init__.py  text_magpie.py
config_synth_flow/base/: __init__.py  config.py  pipeline.py  prompt_template.py  router.py  validator.py
config_synth_flow/base/executor/: base_executor.py
config_synth_flow/base/io/: __init__.py  base_reader.py  base_writer.py
config_synth_flow/base/mixins/: __init__.py  logging.py  pipeline_core.py  required_packages.py  serializable.py  types.py
config_synth_flow/base/pipeline/: __init__.py  async_pipeline.py  base_pipeline.py  chat_pipeline.py  config.py  judge_pipeline.py  lambda_pipeline.py  multiprocess_pipeline.py  utils.py
config_synth_flow/executor/: __init__.py  base.py  sequential.py
config_synth_flow/executors/: __init__.py  sequential.py
config_synth_flow/pipelines/: __init__.py
config_synth_flow/pipelines/api/: __init__.py  infinity.py  openai_chat.py  qdrant.py
config_synth_flow/pipelines/chat/: __init__.py  generator.py
config_synth_flow/pipelines/data_cleaning/: __init__.py  jina_reader_lm.py  md_cleaning.py  text_cleaning.py  text_filter.py  trafilatura.py
config_synth_flow/pipelines/data_format/: __init__.py  process.py
config_synth_flow/pipelines/deduplication/: __init__.py  minhash.py  set.py
config_synth_flow/pipelines/embedding_reranker/: __init__.py  infinity.py
config_synth_flow/pipelines/evaluation_metrics/: __init__.py  accuracy.py
config_synth_flow/pipelines/fedgpt/: fedgpt_chat.py
config_synth_flow/pipelines/format/: __init__.py  process.py
config_synth_flow/pipelines/judge/: __init__.py  infinity_edu_classifier.py  llm_as_judge.py  openai_lm_ppl.py  sglang_rm_judge.py
config_synth_flow/pipelines/text_chunking/: __init__.py  spliter.py
config_synth_flow/pipelines/text_process/: text_spliter.py  token_counter.py
config_synth_flow/reader/: __init__.py  base.py  docling_parser.py  docling_server.py  hf_dataset.py  markitdown_parser.py  null_reader.py
config_synth_flow/router/: __init__.py  base.py  random_router.py
config_synth_flow/scripts/: run_seq.py
config_synth_flow/writer/: __init__.py  base.py  hf_writer.py
configs/: example.yml
configs/example/: dedup_cc.yml  evaluation.yml  summary.yml
configs/examples/: magpie.yml  system_prompts.jsonl
tests/: README.md  test_configs.py
tests/base/: test_prompt_template.py
tests/configs/: test_chat_gen.yml  test_exact_math_dedup.yml  test_llm_judge.yml  test_minhash_dedup.yml
tests/sample_data/: messages.jsonl  text.jsonl
tests/writer/: test_hf_writer.py
(+18 files in other folders)
