[tool.poetry]
name = "config_synth_flow"
version = "0.1.0"
description = ""
authors = ["aqweteddy"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
datasets = "^3.2.0"
fire = "^0.7.0"
ipython = "^8.31.0"
pydantic = "^2.10.5"
openai = "^1.59.7"
qdrant-client = "^1.12.2"
jinja2 = "^3.1.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.1"


[tool.poetry.group.docling.dependencies]
docling = "^2.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]


[tool.poetry.scripts]
run-seq = "config_synth_flow.scripts.run_seq:main"