[tool.poetry]
name = "config_synth_flow"
version = "0.1.0"
description = "Configurable workflows for synthetic data generation"
authors = ["aqweteddy"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
datasets = "^3.2.0"
fire = "^0.7.0"
ipython = "^8.31.0"
pydantic = "^2.10.5"
openai = "^1.59.7"
qdrant-client = "^1.10"
jinja2 = "^3.1.5"
ruff = "^0.9.2"
semantic-text-splitter = "^0.22.0"
tokenizers = "^0.19.0"
joblib = "^1.4.2"
numpy = "^2.2.2"
markitdown = "^0.0.1a4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.1"
black = "^24.10.0"


[tool.poetry.group.docling.dependencies]
docling = "^2.15.1"
ftfy = "^6.3.1"


[tool.poetry.group.dedup.dependencies]
rensa = "^0.1.7"


[tool.poetry.group.trafilatura.dependencies]
trafilatura = "^2.0.0"



[tool.poetry.group.docs.dependencies]
pdoc = "^15.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
fix = true
include = ["config_synth_flow/**"]
line-length = 100

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "F", "I", "UP"]

[tool.poetry.scripts]
run-seq = "config_synth_flow.scripts.run_seq:main"